@@ -33,7 +33,7 @@ requires:
   Indent::Word: 0.01
   List::MoreUtils: 0
   Readonly: 0
-  Tags::Output: 0.09
+  Tags::Output: 0.1
   Tags::Utils: 0.09
   Tags::Utils::Preserve: 0.09
   perl: 5.6.0
