@@ -23,7 +23,7 @@ requires 'Indent::Word' => 0.01;
 requires 'Indent::Block' => 0.01;
 requires 'List::MoreUtils' => 0;
 requires 'Readonly' => 0;
-requires 'Tags::Output' => 0.09;
+requires 'Tags::Output' => 0.10;
 requires 'Tags::Utils' => 0.09;
 requires 'Tags::Utils::Preserve' => 0.09;
 requires 'perl' => '5.6.0';
