@@ -1,4 +1,5 @@
 0.07
+ - Add 'input_tags_item_callback' for processing before 'Tags' put().
  - Fix Makefile.PL fails with no '.' in @INC.
 
 0.06 2020-04-28T00:10:37+02:00
